Thu Aug 18 13:46:38 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/orbsvcs/Log/LogActivator.cpp:

	  Changed to omit identifier name for unused parameters.

	* orbsvcs/orbsvcs/Log/LogMgr_i.cpp:

	  Changed to use CORBA::RepositoryId_var for the return value of
	  create_log_repositoryid() so results will be freed on exit.

	* orbsvcs/orbsvcs/Log/BasicLogFactory_i.cpp:
	* orbsvcs/orbsvcs/Log/EventLogFactory_i.cpp:
	* orbsvcs/orbsvcs/Log/NotifyLogFactory_i.cpp:
	* orbsvcs/orbsvcs/Log/RTEventLogFactory_i.cpp:

	  Changed create_log_repositoryid() to duplicate string rather
	  than returning a string literal.

Thu Aug 18 15:19:40 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_exception/exception_ctor.cpp:
        * TAO_IDL/be/be_visitor_union_branch/private_ch.cpp:
        * TAO_IDL/be/be_visitor_union_branch/public_ch.cpp:

          Removed more instances of generating a leading '::'
          in front of ACE_NESTED_CLASS.

Wed Aug 17 11:30:37 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/orbsvcs/Log/NotifyLogFactory_i.cpp (create_with_id):

	  Fix bug where _nil() was returned instead of new object
	  reference.

	* orbsvcs/orbsvcs/Makefile.am:

	  Regenerated.

	* orbsvcs/orbsvcs/DsLogAdmin.mpc:

	  Add LogActivator.cpp to Source_Files in the DsLogAdmin_Serv
	  project.

	* orbsvcs/orbsvcs/Log/BasicLogFactory_i.cpp:
	* orbsvcs/orbsvcs/Log/EventLogFactory_i.cpp:
	* orbsvcs/orbsvcs/Log/NotifyLogFactory_i.cpp:
	* orbsvcs/orbsvcs/Log/RTEventLogFactory_i.cpp:

	  Changed create() and create_with_id() methods to invoke
	  create_log_reference() instead of create_log_object().  This is
	  not absolutely necessary, since a log is very likely to be used
	  after it is created.  However, it helps to ensure the servant
	  activator code path is exercised so it will work when a dynamic
	  logging strategy that needs it is loaded.

	* orbsvcs/orbsvcs/Log/LogMgr_i.cpp
